<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SalubTest2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Exercise">Exercise</string>
    <string name="Food">Food</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="salubrity_logo">logo</string>
    <string name="retype_password">Retype Password</string>
    <string name="password_string">Password</string>
    <string name="email_address_string">Email Address</string>
    <string name="login_button">Login</string>
    <string name="calories_lost">Calories Lost</string>
    <string name="total_calories">Total Calories</string>
    <string name="calorie_intake">Calorie Intake</string>
    <string name="today_s_progress">Todays Progress</string>
    <string name="foods">Foods</string>
    <string name="submit">Submit</string>
    <string name="fats">Fats</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="calories_eaten">Calories Eaten</string>
    <string name="what_you_eating">Eating Journal</string>
    <string name="sets">Sets/Reps</string>
    <string name="reps">Time</string>
    <string name="exercise">Type of Workout</string>
    <string name="your_workout">Exercise Journal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="hello">Hello</string>
    <string name="daily_averages">Daily Averages</string>
    <string name="daily_questionnaire">Daily Questionnaire</string>
    <string name="name">Name</string>
    <string name="answer">Answer</string>
    <string name="rate_your_ability_to_concentrate_on_a_scale_of_1_to_10">Rate your ability to concentrate on a scale of 1 to 10?</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_10">10</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="sign_out">Sign Out</string>
    <string name="reload">Reload</string>
    <string name="verify_email">Verify Email</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="signed_out">Signed Out</string>
    <string name="emailpassword_title_text">Salubrity</string>
    <string name="desc_firebase_lockup" />
    <string name="auth_failed" />
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="disconnect">Disconnect</string>
    <string name="google_title_text">Salubrity</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="notes">Notes</string>
    <string name="finish">Finish</string>
    <string name="you_have_already_taken_the_questionairre_for_today">You have already taken the questionairre for today.</string>
    <string name="past_seven_days">Past Seven Days</string>
    <string name="past_thirty_days">Past Thirty Days</string>
    <string name="_7_days">7 Days</string>
    <string name="_30_days">30 Days</string>
    <string name="add">Add</string>
    <string name="textview">TextView</string>
    <string name="recent_notes">Recent Notes</string>
    <string name="how_you_ve_eaten_recently">How You\'ve Eaten Recently</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="recent_entries">Yesterdays Entry</string>
    <string name="dd_mm_yyyy">dd-MM-YYYY</string>
    <string name="date">DD-MM-YYYY</string>
    <string name="search">Search</string>
    <string name="textvie" tools:ignore="DuplicateDefinition">TextView</string>
    <string name="home">Home</string>
    <string name="text">text</string>
    <string name="get_entry">Get Entry</string>
    <string name="search_entry">Search Entry</string>
    <string name="questions">Questions</string>
</resources>