<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003566"
    tools:context="ui.notifications.Food">

        <TextView
            android:id="@+id/what_you_eating"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/what_you_eating"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/calories_eaten_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/calories_eaten_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/calories_eaten"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="#16DB93"
            app:layout_constraintBottom_toTopOf="@+id/protein_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/what_you_eating" />

        <EditText
            android:id="@+id/protein_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/protein"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="#16DB93"
            app:layout_constraintBottom_toTopOf="@+id/carbs_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calories_eaten_edittext" />

        <EditText
            android:id="@+id/carbs_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/carbs"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="#16DB93"
            app:layout_constraintBottom_toTopOf="@+id/fats_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/protein_edittext" />

        <EditText
            android:id="@+id/fats_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fats"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="#16DB93"
            app:layout_constraintBottom_toTopOf="@+id/foods_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carbs_edittext" />

        <EditText
            android:id="@+id/foods_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/foods"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#16DB93"
            app:layout_constraintBottom_toTopOf="@+id/submit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fats_edittext" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:text="@string/submit"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.818" />

</androidx.constraintlayout.widget.ConstraintLayout>